# no-sharing

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
no_sharing/: loss.py  model.py  utils.py
tests/: test_model.py
